fix(AttachmentsPageAttachment): overlay buttons spacing
fix: #132

--- a/data/style.css
+++ b/data/style.css
@@ -184,11 +184,15 @@ flowboxchild {
 }
 
 .ttl-status-badge {
-	background-color: rgba(0, 0, 0, .8);
 	color: white;
 	border-radius: 6px;
-	margin-left: 8px;
-	margin-bottom: 8px;
+	margin: 8px;
+}
+
+.ttl-status-badge:not(.attachmentpageattachment) {
+	background-color: rgba(0, 0, 0, .8);
+}
+
 }
 
 .ttl-status-badge>* {
